@@ -15,6 +15,10 @@ Silva changes
 
       - Small context bug fixes in the LookupWindowWidget.
 
+      - Changed mangle.Path.fromObject() so it doesn't return '' anymore when
+        from and to objects are the same.
+  
+
   1.5.2
 
     Bugs fixed
